<resources>
    <string name="app_name">AppTimPhongTro</string>
    <string name="decriptionImage">Motaanh</string>
    <string name="Home_title">Tìm Phòng trọ</string>
    <string name="Home_content">Tìm phòng ước mơ của bạn</string>
    <string name="Home_search">Tìm theo địa điểm, giá, diện tích…</string>
    <string name="Home_price">$2–5tr</string>
    <string name="Home_address">Tp HCM</string>
    <string name="Home_Noibat">Phòng trọ nổi bật</string>
    <string name="Home_Xemthem">Xem thêm</string>
    <string name="itemPhongTro_title">Phòng trọ giá rẻ cho sinh viên</string>
    <string name="itemPhongTro_ward">Thủ Đức,</string>
    <string name="itemPhongTro_city">Thành phố Hồ Chí Minh</string>
    <string name="itemPhongTro_Area">25m²</string>
    <string name="itemPhongTro_Price">3.000.000đ/tháng</string>
    <string name="itemPhongTro_Detail">Xem chi tiết</string>
    <string name="iconHouse">Trang chủ</string>
    <string name="iconSearch">Tìm kiếm</string>
    <string name="iconAddPost">Đăng tin</string>
    <string name="iconFavorite">Yêu thích</string>
    <string name="iconProfile">Cá nhân</string>
    <string name="menu_price_tatca">Tất cả</string>
    <string name="menu_price_duoi2tr">$0–2tr</string>
    <string name="menu_price_2den5tr">$2–5tr</string>
    <string name="menu_price_5den8tr">$5–8tr</string>
    <string name="menu_price_tren8tr">Trên 8tr</string>
    <string name="profile_txtTilte">Chào mừng bạn!</string>
    <string name="profile_txtContent">Đăng nhập để trải nghiệm đầy đủ tính năng</string>
    <string name="profile_txtLogin">Đăng nhập</string>
    <string name="profile_txtSignUp">Đăng ký</string>
    <string name="profile_txtTilteLogin">Đăng nhập để sử dụng</string>
    <string name="profile_txtContent1">Lưu phòng yêu thích</string>
    <string name="profile_txtContent2">Nhận thông báo phòng mới</string>
    <string name="profile_txtContent3">Đăng tin cho thuê phòng</string>
    <string name="profile_txtContent4">Quản lý tin đăng của bạn</string>
    <string name="profile_txtHotro">Trung tâm hỗ trợ</string>
    <string name="profile_txtCauhoi">Câu hỏi thường gặp</string>
    <string name="profile_txtLienHe">Liên hệ</string>
    <string name="profile_txtHotline">Hotline: 0397 589 xxx</string>
    <string name="profile_txtDieuKhoan">Điều khoản và chính sách</string>
    <string name="profile_txtQuyDinh">Quy định sử dụng</string>
    <string name="profile_txtDangXuat">Đăng xuất</string>
    <string name="layout_profile_login_user_txtInforUser">Thông tin cá nhân</string>
    <string name="layout_profile_login_user_txtUpdateInfor">Cập nhật hồ sơ</string>
    <string name="layout_profile_login_user_txtNotication">Thông báo</string>
    <string name="layout_profile_login_user_txtSettingNotication">Cài đặt nhận thông báo</string>
    <string name="layout_profile_login_user_txtSecurity">Bảo mật</string>
    <string name="layout_profile_login_user_txtChangePassword">Đổi mật khẩu</string>
    <string name="layout_profile_login_user_txtTilteDangTin">Bạn có phòng cho thuê?</string>
    <string name="layout_profile_login_user_txtContentDangTin">Đăng tin miễn phí, tiếp cận hàng nghìn khách thuê</string>
    <string name="layout_profile_login_user_txtDangTin">Đăng tin ngay</string>
    <string name="layout_profile_login_chutro_txtTinDang">Tin đăng của tôi </string>
    <string name="layout_profile_login_chutro_txtSoTinDangHoatDong">0 tin đang hoạt động </string>
    <string name="layout_profile_login_chutro_txtAllRoom">Quản lý phòng </string>
    <string name="layout_profile_login_chutro_txtContent">Bao gồm tin đăng và tin nháp</string>
    <string name="layout_profile_login_chutro_txtTinHetHan">Tin đã hết hạn</string>
    <string name="layout_profile_login_chutro_txtGiaiPhap">Gia hạn hoặc xóa</string>
    <string name="profile_lienhe">Liên hệ hỗ trợ</string>
    <string name="profile_doimk">Đổi mật khẩu</string>
    <string name="profile_dangxuat">Đăng xuất</string>
    <string name="search_diadiem">Địa điểm</string>
    <string name="search_title">Bộ lọc tìm kiếm</string>
    <string name="search_CityName">Tp Hồ Chí Minh</string>
    <string name="search_Ward">Chọn phường/xã</string>
    <string name="search_titlePrice">Khoảng giá</string>
    <string name="search_titleTienNghi">Tiện nghi</string>
    <string name="search_chip1">&lt;=2 triệu</string>
    <string name="search_chip2">2 – 3 triệu</string>
    <string name="search_chip3">3 – 4 triệu</string>
    <string name="search_chip4">4 – 5 triệu</string>
    <string name="search_chip5">5 – 6 triệu</string>
    <string name="search_chip6">6 – 8 triệu</string>
    <string name="search_chip7">8 – 10 triệu</string>
    <string name="search_chip8">10 – 12 triệu</string>
    <string name="search_chip9">>12 triệu</string>
    <string name="search_ApDung">Áp dụng</string>
    <string name="search_amenity1">Có máy lạnh</string>
    <string name="search_amenity2">Wifi</string>
    <string name="search_amenity3">Thang máy</string>
    <string name="search_amenity4">Có gác</string>
    <string name="search_amenity5">Giờ giấc tự do</string>
    <string name="search_amenity6">Nuôi thú cưng</string>
    <string name="search_amenity7">Có ban công</string>
    <string name="search_amenity8">Có cửa sổ</string>
    <string name="search_amenity9">Không máy lạnh</string>
    <string name="searchChoice_City">Chọn tỉnh/thành phố</string>
    <string name="searchChoiceItem_CountRoom">100 phòng trọ</string>
    <string name="searchBottomfragment_City">Xác nhận</string>
    <string name="layoutItemSearch_Ward">Phường Tân Sơn Hòa</string>
    <string name="searchBottomFragment_WardTitle">Chọn Phường/xã</string>
    <string name="menu_local_tatca">Tất cả</string>
    <string name="menu_local_hanoi">Hà Nội</string>
    <string name="menu_local_danang">Đà nẵng</string>
    <string name="menu_local_hcm">Tp HCM</string>
    <string name="resultSearch_tiltle">Kết quả tìm kiếm</string>
    <string name="resultSearch_NameCity">Tp Hồ Chí Minh</string>
    <string name="resultSearch_lienket">-</string>
    <string name="resultSearch_Price">2 – 3 triệu</string>
    <string name="resultSearch_Amenity">Có máy lạnh, Wifi</string>
    <string name="resultSearch_textFilter">Bộ lọc</string>
    <string name="resultSearch_SortPrice">Sắp xếp</string>
    <string name="resultSearch_SortDistance">Gần tôi nhất</string>
    <string name="resultSearch_textQuantityRoom">Tìm thấy</string>
    <string name="resultSearch_txtResultQuantity">0 phòng trọ</string>
    <string name="resultSearch_txtTilteNote">Gợi ý cho bạn:</string>
    <string name="resultSearch_txtContentNote1">Thử mở rộng khu vực tìm kiếm</string>
    <string name="resultSearch_txtContentNote2">Điều chỉnh khoảng giá cho phù hợp</string>
    <string name="resultSearch_txtContentNote3">Giảm bớt các tiêu chí lọc</string>
    <string name="resultSearch_txtContentNote4">Thử tìm kiếm các phường/xã lân cận</string>
    <string name="resultSearch_btnDieuChinh">Điều chỉnh bộ lộc</string>
    <string name="resultSearch_txtInformation">Rất tiếc, chúng tôi không tìm thấy phòng trọ nào phù hợp với tiêu chí của bạn.</string>
    <string name="bottomSort_title">Sắp xếp theo</string>
    <string name="bottomSort_txtDiaDiem">Gần tôi nhất</string>
    <string name="bottomSort_SortTang">Giá tăng dần</string>
    <string name="bottomSort_SortGiam">Giá giảm dần</string>
    <string name="bottomSort_New">Mới nhất</string>
    <string name="loginframent_txtTilte">Chào mừng bạn trở lại!</string>
    <string name="loginframent_txtContent">Đăng nhập để tiếp tục khám phá</string>
    <string name="loginframent_txtTitleNhap1">Số điện thoại hoặc Email</string>
    <string name="loginframent_txtTitleNhap2">Mật khẩu</string>
    <string name="loginframent_txtContentNhap1">Nhập số điện thoại hoặc Email</string>
    <string name="loginframent_txtContentNhap2">Nhập mật khẩu</string>
    <string name="loginframent_txtForgotPass">Quên mật khẩu?</string>
    <string name="loginframent_txtContent3">Bạn chưa có tài khoản?</string>
    <string name="loginframent_txtDK">Đăng ký ngay</string>
    <string name="loginframent_txtQuayLai">Quay Lại</string>
    <string name="loginframent_txtTaiKhoan">Tài khoản</string>
    <string name="loginframent_txtTenUser">VT</string>
    <string name="loginframent_txtFullNameUser">Văn Tài</string>
    <string name="loginframent_txtFullRoleName">Chủ trọ</string>
    <string name="loginframent_txtPhoneNumber">0900288077</string>
    <string name="addpostfragment_txtTilte">Đăng tin mới</string>
    <string name="addpostfragment_txtStep">Bước 1/3:</string>
    <string name="addpostfragment_txtContenStep">Thông tin cơ bản</string>
    <string name="add_post_header_step1">Bước 1/3: Thông tin cơ bản</string>
    <string name="add_post_header_step2">Bước 2/3: Vị trí phòng trọ</string>
    <string name="add_post_header_step3">Bước 3/3: Hình ảnh phòng trọ</string>
    <string name="addpostfragment_txtTiltePost">Đăng tin cho thuê phòng trọ</string>
    <string name="addpostfragment_txtContentPost">Tiếp cận hàng ngàn người thuê trọ mỗi ngày. Quy trình đơn giản, nhanh chóng chỉ trong vài bước.</string>
    <string name="addpostfragment_txtTilteNotication1">Xác minh chủ trọ</string>
    <string name="addpostfragment_txtTilteNotication2">Đăng tin nhanh chóng</string>
    <string name="addpostfragment_txtTilteNotication3">Miễn phí đăng tin</string>
    <string name="addpostfragment_txtContentNotication1">Tin đăng được kiểm duyệt kỹ lưỡng</string>
    <string name="addpostfragment_txtContentNotication2">Chỉ mất 3–5 phút để hoàn thành</string>
    <string name="addpostfragment_txtContentNotication3">Không tốn bất kỳ chi phí nào</string>
    <string name="addpostfragment_btnStartAddPost">Bắt đầu đăng tin</string>
    <string name="step1Infor_txtTitle">Tiêu đề tin đăng *</string>
    <string name="step1Infor_edtTitle">VD: Phòng trọ giá rẻ gần ĐH STU</string>
    <string name="step1Infor_txtContent">Mô tả chi tiết *</string>
    <string name="step1Infor_edtContent">Mô tả về phòng: vị trí, diện tích, tiện ích, quy định…</string>
    <string name="step1Infor_txtArea">Diện tích (m²) *</string>
    <string name="step1Infor_edtArea">30</string>
    <string name="step1Infor_txtPrice">Giá thuê/tháng (đ) *</string>
    <string name="step1Infor_edtPrice">3000000</string>
    <string name="step1Infor_txtAmenity">Tiện ích *</string>
    <string name="step1Infor_btnTiepTuc">Tiếp tục</string>
    <string name="step1Infor_btnQuayLai">Quay Lại</string>
    <string name="step2Address_txtTilteProvince">Tỉnh/Thành phố *</string>
    <string name="step2Address_txtTilteWard">Phường/Xã *</string>
    <string name="step2Address_txtTilteAddress">Địa chỉ cụ thể *</string>
    <string name="step2Address_txtProvince">Chọn Tỉnh/Thành phố</string>
    <string name="step2Address_txtWard">Chọn Phường/Xã</string>
    <string name="step2Address_txtAddress">Số nhà, tên đường…</string>
    <string name="step2Address_btnXacNhanVitri">Xác nhận vị trí</string>
    <string name="itemaminity_name">wifi</string>
    <string name="step2Infor_txtNotication">Xác định vị trí chính xác</string>
    <string name="step2Infor_txtContentNotication">Nhập địa chỉ và xác nhận trên bản đồ để người thuê dễ tìm thấy</string>
    <string name="step3Image_txtNotication">Mẹo chụp ảnh tốt</string>
    <string name="step3Image_txtContentNotication1">• Chụp đủ ánh sáng, không bị mờ</string>
    <string name="step3Image_txtContentNotication2">• Chụp nhiều góc khác nhau</string>
    <string name="step3Image_txtContentNotication3">• Tối thiểu 3 ảnh, tối đa 10 ảnh</string>
    <string name="step3Image_txtContentNotication4">Ảnh phòng trọ * (Tối thiểu 3 ảnh)</string>
    <string name="MyPost_Title">Tin đăng của tôi</string>
    <string name="MyPost_content_tilte">Bạn chưa có bài đăng nào</string>
    <string name="MyPost_content">Hãy đăng tin phòng trọ của bạn ngay</string>
    <string name="MyPost_content_Button">Đăng tin mới</string>
</resources>