<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/iconHouse"
            android:icon="@drawable/iconhouse"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/iconSearch"
        android:icon="@drawable/iconsearch"/>
    <item
        android:id="@+id/addPostFrgament"
        android:title="@string/iconAddPost"
        android:icon="@drawable/icon_addpost"
        />
    <item
        android:id="@+id/favotiteFragment"
        android:title="@string/iconFavorite"
        android:icon="@drawable/iconfavorite"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/iconProfile"
        android:icon="@drawable/iconperson"/>

</menu>