<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment"
    android:background="#074EFF">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bo4goc_nenxam"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/decriptionImage"
            android:src="@drawable/icon_exit"
            app:tint="#074EFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/iconExit"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#074EFF"
            android:textStyle="bold"
            android:text="@string/loginframent_txtQuayLai"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>



        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/loginframent_txtTilte"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconExit" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/loginframent_txtContent"
            android:textColor="#4D4D4D"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />
        <TextView
            android:id="@+id/txtTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContent"
            android:text="@string/loginframent_txtTitleNhap1"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edtContent1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle1"
            android:hint="@string/loginframent_txtContentNhap1"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:background="@drawable/bo4goc_viennen_xam"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"

            />
        <TextView
            android:id="@+id/txtTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtContent1"
            android:text="@string/loginframent_txtTitleNhap2"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle2"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/loginframent_txtContentNhap2"

                android:inputType="text"
                android:background="@drawable/bo4goc_viennen_xam"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/decriptionImage"
                android:src="@drawable/icon_visibility"
                android:layout_marginEnd="15dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctPass"
            android:text="@string/loginframent_txtForgotPass"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#074EFF"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApDung"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_xanh"
            android:text="@string/search_ApDung"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPass"
            />
        <TextView
            android:id="@+id/txtHoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnApDung"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="@string/loginframent_txtContent3"
            app:layout_constraintEnd_toStartOf="@+id/txtDk"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtDk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnApDung"
            app:layout_constraintStart_toEndOf="@+id/txtHoi"
            android:text="@string/loginframent_txtDK"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#074EFF"
            android:layout_marginStart="5dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>