<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.Step1InforFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bo4goc_nenxam"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtTilte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/step1Infor_txtTitle"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/bo4goc_nenxam"
            android:backgroundTint="#F4F4F4"
            android:hint="@string/step1Infor_edtTitle"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTilte" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/step1Infor_txtContent"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/bo4goc_nenxam"
            android:backgroundTint="#F4F4F4"
            android:gravity="start"
            android:hint="@string/step1Infor_edtContent"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:singleLine="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContent" />

        <LinearLayout
            android:id="@+id/layoutArea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtContent">

            <TextView
                android:id="@+id/txtArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/step1Infor_txtArea"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtArea"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/bo4goc_nenxam"
                android:backgroundTint="#F4F4F4"
                android:hint="@string/step1Infor_edtArea"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPrice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutArea">

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/step1Infor_txtPrice"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPrice"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/bo4goc_nenxam"
                android:backgroundTint="#F4F4F4"
                android:hint="@string/step1Infor_edtPrice"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtAmenity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/step1Infor_txtAmenity"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPrice" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAmenity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmenity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvAmenity">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnQuaylai"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bo4goc_viennen_xam"
                android:text="@string/step1Infor_btnQuayLai"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_xanh"
                android:text="@string/step1Infor_btnTiepTuc"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>