<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@drawable/bo4goc_nenxam">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImgAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/decriptionImage"
        app:cardCornerRadius="3dp"
        android:padding="3dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/decriptionImage"
            android:src="@drawable/addresss"
            android:background="@color/xamnhe"
            android:padding="3dp"
            />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/txtCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cvImgAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/search_CityName"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/txtCountRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cvImgAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtCityName"
        android:text="@string/searchChoiceItem_CountRoom"
        android:layout_marginStart="10dp"

        android:textSize="16sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>